<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.peckishv2.Backend.Preferences">

    <include
        android:id="@+id/preference_logo"
        style="@style/Widget.AppCompat.Toolbar"
        layout="@layout/toolbar_plain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skip_link"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"

        android:clickable="true"
        android:gravity="center"
        android:text="@string/skip_btn"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_logo" />

    <TextView
        android:id="@+id/diet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:text="@string/diet_title"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        style="@style/text_style_shadow"

        app:layout_constraintBottom_toTopOf="@+id/allergens_title"
        app:layout_constraintEnd_toStartOf="@+id/skip_link"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_logo"
        app:layout_constraintVertical_bias="0.25" />

    <!-- button3 -->
    <ImageButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn3_desc"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/pescatarian"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/diet_title" />

    <TextView
        android:id="@+id/item3_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item3_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3" />

    <!-- button2 -->
    <ImageButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn2_desc"
        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/vegan"

        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/diet_title" />

    <TextView
        android:id="@+id/item2_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item2_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2" />

    <!-- button1 -->
    <ImageButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn1_dec"
        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/veg"

        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_title" />

    <TextView
        android:id="@+id/item1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item1_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1" />

    <!-- button4 -->
    <ImageButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn4_desc"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/paleo"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/item4_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item4_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4" />

    <!-- button5 -->
    <ImageButton
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn5_btn"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/keto"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/item5_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item5_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5" />

    <!-- button6 -->
    <ImageButton
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn6_desc"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/meat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <TextView
        android:id="@+id/item6_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item6_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button6" />


    <TextView
        android:id="@+id/allergens_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:text="@string/allergens_intolerances_title"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        style="@style/text_style_shadow"

        app:layout_constraintBottom_toTopOf="@+id/continue_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_logo"
        app:layout_constraintVertical_bias="0.6" />

    <!-- button7 -->
    <ImageButton
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn7_desc"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/gluten"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allergens_title" />
    <TextView
        android:id="@+id/item7_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item7_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@+id/button7" />

    <!-- button8 -->
    <ImageButton
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn8_desc"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/dairy"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/allergens_title" />

    <TextView
        android:id="@+id/item8_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item8_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button8" />

    <!-- button9 -->
    <ImageButton
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn9_desc"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/nuts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/allergens_title" />

    <TextView
        android:id="@+id/item9_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item9_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="@+id/button9"
        app:layout_constraintStart_toStartOf="@+id/button9" />

    <!-- button10 -->
    <ImageButton
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn10_desc"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/shellfish"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <TextView
        android:id="@+id/item10_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item10_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="@+id/button10"
        app:layout_constraintStart_toStartOf="@+id/button10" />

    <!-- button11 -->
    <ImageButton
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn11_desc"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/soy"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <TextView
        android:id="@+id/item11_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item11_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="@+id/button11"
        app:layout_constraintStart_toStartOf="@+id/button11" />

    <!-- button12 -->
    <ImageButton
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"

        android:background="@drawable/deselected_item_background"
        android:contentDescription="@string/btn12_desc"

        android:elevation="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/egg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <TextView
        android:id="@+id/item12_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="15dp"
        android:text="@string/item12_btn"
        android:textColor="@color/dark"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="@+id/button12"
        app:layout_constraintStart_toStartOf="@+id/button12" />

    <ImageButton
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"

        android:background="@android:color/transparent"
        android:contentDescription="@string/continue_btn_desc"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/continue_btn" />

    <TextView
        android:id="@+id/continue_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"

        android:text="@string/continue_btn_text"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        android:shadowColor="@color/dark"
        style="@style/text_style_shadow"

        app:layout_constraintBottom_toBottomOf="@+id/continue_btn"
        app:layout_constraintEnd_toEndOf="@+id/continue_btn"
        app:layout_constraintStart_toStartOf="@+id/continue_btn"
        app:layout_constraintTop_toTopOf="@+id/continue_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>