<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.peckishv2.Backend.Login">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/peckish_logo"
        android:elevation="5dp"
        android:src="@drawable/logo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"

        android:text="@string/subtitle"
        android:textColor="@color/dark"
        android:textSize="20sp"
        android:textStyle="bold"

        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"

        style="@style/editText_outline_round"
        android:autofillHints="password"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.7" />

    <EditText
        android:id="@+id/email"
        style="@style/editText_outline_round"
        android:layout_width="300dp"
        android:layout_height="48dp"

        android:layout_marginBottom="8dp"
        android:autofillHints="emailAddress"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/register_desc"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:srcCompat="@drawable/register_btn" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"

        android:text="@string/register"
        android:textColor="@color/dark"
        android:textSize="14.5sp"

        app:layout_constraintBottom_toBottomOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="@+id/register_btn"
        app:layout_constraintStart_toStartOf="@+id/register_btn"
        app:layout_constraintTop_toTopOf="@+id/register_btn"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/sign_in_btn"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sign_in_desc"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sign" />

    <TextView
        android:id="@+id/sing_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/sign_in"
        android:textColor="#D7FC9F"
        android:textSize="14.5sp"

        app:layout_constraintBottom_toBottomOf="@+id/sign_in_btn"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
        app:layout_constraintTop_toTopOf="@+id/sign_in_btn" />

    <TextView
        android:id="@+id/logo_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"

        android:text="@string/login_subtext"
        android:textColor="#E6082025"
        android:textSize="14.5sp"
        android:textStyle="bold|italic"

        app:layout_constraintEnd_toStartOf="@+id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>